apps/staging/lobe-chat/deployment.enc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: lobe-chat
    labels:
        name: lobe-chat
spec:
    replicas: 1
    selector:
        matchLabels:
            app: lobe-chat
    template:
        metadata:
            labels:
                app: lobe-chat
        spec:
            containers:
                - image: lobehub/lobe-chat
                  imagePullPolicy: IfNotPresent
                  name: lobe-chat
                  resources:
                    requests:
                        cpu: 50m
                        memory: 64Mi
                    limits:
                        cpu: 100m
                        memory: 256Mi
                  ports:
                    - containerPort: 3210
            restartPolicy: Always
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2024-01-29T01:37:46Z"
    mac: ENC[AES256_GCM,data:bx49hPi3UyIFTdZztxWQkXFKTgCVTArc7J5v9Fu5YPSQQL3YHbsiwDsu1gHx1T6ytDD41TaNDL2ZtwzfSXOqYgdKeVQ30k9431mF824MbegaCNC4nP7ukf5tSkWWlsq/2RE3XGeR9hiOAfhfU4QNNsYHxUZ5RpOnsOykqXh27ks=,iv:QGnadjGOdB30lq/Wc2mr9h0Our031Yo77T7xoHWtSGo=,tag:qiRy6VYeHXG9EgIZCr9JFA==,type:str]
    pgp:
        - created_at: "2024-01-29T01:37:45Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMARAAub5vUAXOfZYUY1X3iHiSIeK4f0T4j0lDJ3xXMaoAjymX
[...]
            =tdGX
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(value|host|hosts|nginx\.ingress\.kubernetes\.io\/mirror-host|nginx\.ingress\.kubernetes\.io\/auth-url|nginx\.ingress\.kubernetes\.io\/auth-signin)$
    version: 3.7.3
