apps/staging/lobe-chat/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
        nginx.ingress.kubernetes.io/proxy-buffer-size: 1m
        nginx.ingress.kubernetes.io/auth-url: ENC[AES256_GCM,data:GkoxZ24IOL01nOS9Gxz+1zTmGxr0sE9ycB2iVEXGWkKlWSIiE3giKw==,iv:WQgW1hB7HuJnjeeDg4KCw0uMF4FdvSLQA8lCCAHrWYU=,tag:KUAm2c9mXt48pcJFQP49cg==,type:str]
        nginx.ingress.kubernetes.io/auth-signin: ENC[AES256_GCM,data:sKxfRRLx391kThNkJBLXRFtlf71m2lWn9xVpAVIjbMclVl1SnkjthRmKi0+5EK0DejfT6++LbQiNKSl43FnO2u/1UztAPSex,iv:qF9AX4zgL5zzRyw0kI3K75Pby/Tfjm8iVT7yzLv+sV4=,tag:9QZIOXo6xSKppX3hC8IA1g==,type:str]
        nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User, X-Auth-Request-Email, X-Auth-Request-Groups, X-Auth-Request-Preferred-Username
    labels:
        app: lobe-chat
    name: lobe-chat
spec:
    ingressClassName: nginx
    rules:
        - host: ENC[AES256_GCM,data:X4+j+4/hQ1oEDFWeqTkH8SVc1Ko=,iv:pYtFtK05WC0tcpPIHZQ9OTtFcStdpiUALIjpPtx9O4E=,tag:kUROWw19RpOYVrxPUDVeUQ==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: lobe-chat
                        port:
                            number: 3210
                  path: /
                  pathType: ImplementationSpecific
    tls:
        - hosts:
            - ENC[AES256_GCM,data:JvdNecxoA9m2Zsty3YN809RKAMg=,iv:CHmbNQvqSTO+yvNiHrVQ1DQtaCGJl8COmPoceQZNGck=,tag:L/FXQUqwNfmxHS1xhnL8qg==,type:str]
          secretName: lobe-chat-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2024-01-29T01:37:54Z"
    mac: ENC[AES256_GCM,data:RnrCFYixACljDDCTSmzZ3CI8IwuF8is/aQbN0sZ9M1NyTz+C5U246fUowqhY/kzWv62502Qq6AE8WqARGcMkw+TCZBWEAK97Cm4YEfJTxR70XSVEwHkdXXnaVaaFkOW2Yos1IphARZB901dVFFgphfkoOKFdrSYXX+yBSRVXLLg=,iv:FGjzg9s58zI6xY+05wd5V1sIynXVGGnXkvUOppovBjY=,tag:Oo0/wGdMsbjgYSD/bSURnA==,type:str]
    pgp:
        - created_at: "2024-01-29T01:37:54Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ//bIhAT7DYqwRlLsBBs6e4jcB1lpr1IbX2AWEDlMGYvfgr
[...]
            =5xVV
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(value|host|hosts|nginx\.ingress\.kubernetes\.io\/mirror-host|nginx\.ingress\.kubernetes\.io\/auth-url|nginx\.ingress\.kubernetes\.io\/auth-signin)$
    version: 3.7.3
